--- a/Learning Tailwind/index.html
+++ b/Learning Tailwind/index.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mini project with Tailwind</title>
     <link rel="stylesheet" href="CSS/main.css">
 </head>
 <body>
-    <h1>Fist lession</h1>
+   <nav class="bg-teal-300 flex justify-between">
+    <img src="Image/hashtec logo.jpg" alt="" class="h-12 ml-4 mt-2">
+    <ul class="flex py-5 justify-end space-x-10 mr-11">
+        <li class="cursor-pointer">Home</li>
+        <li class="cursor-pointer">Pages</li>
+        <li class="cursor-pointer">About Us</li>
+        <li class="cursor-pointer">Privacy Policy</li>
+        <li class="cursor-pointer">Contect US</li>
+    </ul>
+   </nav>
+   <section class="flex bg-white">
+    <div class=" py-40 pl-8">
+       <div class="text-6xl">This is a simple Landing page</div> 
+       <p class="py-3 w-1/2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos corporis fugit aperiam rerum, similique voluptatum a blanditiis dolorum quidem sunt! Aspernatur et eum alias! Quos beatae, deserunt tempore aperiam labore, delectus eveniet sapiente unde deleniti repellat quo a, temporibus ea explicabo vero ut facilis sunt eum? Fuga numquam recusandae tenetur.</p>
+        <div>
+            <button class="bg-green-300 py-2 px-5 text-cyan-50 hover:bg-slate-950 rounded-2xl">Buy</button>
+            <button class="bg-rose-600 py-2 px-5 text-cyan-50 hover:bg-slate-950 rounded-2xl">Click for more</button>
+        </div>
+    </div>
+    <div class="flex items-center">
+        <img src="Image/hashtec demo poster1.png" alt="" class="mr-12" >
+    </div>
+
+   </section>
 </body>
 </html>
